after shopclean up

--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -128,23 +128,15 @@
             <div class="container">
                 <div class="tab-header">
                     <ul class="nav nav-tabs" id="myTab" role="tablist">
-                        <li class="nav-item" role="presentation">
+                        <!-- <li class="nav-item" role="presentation">
                             <button class="nav-link active" id="nav-tab-one" data-bs-toggle="tab"
                                 data-bs-target="#tab-one" type="button" role="tab" aria-controls="tab-one"
                                 aria-selected="true">Featured</button>
-                        </li>
-                        <li class="nav-item" role="presentation">
-                            <button class="nav-link" id="nav-tab-two" data-bs-toggle="tab" data-bs-target="#tab-two"
-                                type="button" role="tab" aria-controls="tab-two" aria-selected="false">Popular</button>
-                        </li>
-                        <li class="nav-item" role="presentation">
-                            <button class="nav-link" id="nav-tab-three" data-bs-toggle="tab" data-bs-target="#tab-three"
-                                type="button" role="tab" aria-controls="tab-three" aria-selected="false">New
-                                added</button>
-                        </li>
+                        </li> -->
+                    
                     </ul>
-                    <a href="#" class="view-more d-none d-md-flex">View More<i
-                            class="fi-rs-angle-double-small-right"></i></a>
+                    <!-- <a href="#" class="view-more d-none d-md-flex">View More<i
+                            class="fi-rs-angle-double-small-right"></i></a> -->
                 </div>
                 <!--End nav-tabs-->
                 <div class="tab-content wow fadeIn animated" id="myTabContent">
@@ -162,16 +154,26 @@
                                                             alt="<%= products[i].productName || 'Product Image' %>">
                                                     </a>
                                                 </div>
+                                                <% if (locals.user) { %>
                                                 <div class="product-action-1">
-                                                    <a aria-label="Quick view" class="action-btn hover-up" data-bs-toggle="modal" 
-                                                       data-bs-target="#quickViewModal" onclick="openQuickView('<%= products[i]._id %>')">
-                                                        <i class="fi-rs-eye"></i>
-                                                    </a>
+                                                    
                                                     <a aria-label="Add To Wishlist" class="action-btn hover-up" 
                                                        onclick="addToWishlist('<%= products[i]._id %>')">
                                                        <i class="fi-rs-heart"></i>
                                                     </a>
                                                 </div>
+                                                <%}else{%>
+
+                                                    <div class="product-action-1">
+                                                    
+                                                        <a aria-label="Add To Wishlist" class="action-btn hover-up" 
+                                                           href="/login">
+                                                           <i class="fi-rs-heart"></i>
+                                                        </a>
+                                                    </div>
+
+
+                                                    <%}%>
                                                 <div class="product-badges product-badges-position product-badges-mrg">
                                                     <span class="hot">Hot</span>
                                                 </div>
@@ -206,11 +208,7 @@
                                                         </span>
                                                     <% } %>
                                                 </div>
-                                                <div class="product-action-1 show">
-                                                    <a aria-label="Add To Cart" class="action-btn hover-up" href="/cart/add?id=<%= products[i]._id %>">
-                                                        <i class="fi-rs-shopping-bag-add"></i>
-                                                    </a>
-                                                </div>
+                                               
                                             </div>
                                         </div>
                                     </div>
