--- a/views/partials/admin/header.ejs
+++ b/views/partials/admin/header.ejs
@@ -228,33 +228,15 @@
             <div class="col-search">
             </div>
           
-
-            <div class="d-flex align-items-center justify-content-between">
-                <!-- Offcanvas Trigger Button -->
-                <button class="btn btn-icon btn-outline-primary me-auto" data-bs-toggle="offcanvas" data-bs-target="#offcanvas_aside">
-                    <span class="material-icons">menu</span>
-                </button>
-            
                 <!-- User Profile Dropdown -->
                 <ul class="nav">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle d-flex align-items-center" data-bs-toggle="dropdown" href="#" id="dropdownAccount" aria-expanded="false">
-                            <img class="img-xs rounded-circle me-2" src="https://via.placeholder.com/40" alt="User">
-                            <span>Admin</span>
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownAccount">
-                            <a class="dropdown-item" href="/admin/profile">
-                                <i class="material-icons text-primary me-2">person</i> Profile
+                    
+                      
+                            <a class="dropdown-item text-danger" href="/admin/logout" style="margin-right: 20px;" >
+                                <i class="material-icons me-2"></i> Logout
                             </a>
-                            <a class="dropdown-item" href="/admin/settings">
-                                <i class="material-icons text-warning me-2">settings</i> Settings
-                            </a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item text-danger" href="/admin/logout">
-                                <i class="material-icons me-2">exit_to_app</i> Logout
-                            </a>
-                        </div>
-                    </li>
+                      
+                 
                 </ul>
             </div>
             
