--- a/views/user/verify-otp.ejs
+++ b/views/user/verify-otp.ejs
@@ -203,7 +203,8 @@
                         <div id="otpTimer" class="otp-timer">
                             <span id="timerValue">60</span>
                         </div>
-                        <button type="button" class="btn btn-secondary" onclick="resendOTP()">Resend OTP</button>
+                        <button type="button" id="resendOtpBtn" class="btn btn-secondary" onclick="resendOTP()" disabled>Resend OTP</button>
+
                     </div>
                     <% if (locals.message && message.length > 0) { %>
                     <div class="alert alert-danger"><%= message %></div>
@@ -229,6 +230,7 @@ timer=60;
 document.getElementById("timerValue").textContent=timer; //for reset the timer display
 document.getElementById("timerValue").classList.remove("expired");
 document.getElementById("otp").disabled = false;
+document.getElementById("resendOtpBtn").disabled = true; 
 
         timerInterval = setInterval(() => {
             timer--;
@@ -238,6 +240,7 @@ document.getElementById("otp").disabled = false;
                 document.getElementById("timerValue").classList.add("expired");
                 document.getElementById("timerValue").textContent = "Expired";
                 document.getElementById("otp").disabled = true;
+                document.getElementById("resendOtpBtn").disabled = false;
             }
         }, 1000);
     }
@@ -284,6 +287,7 @@ clearInterval(timerInterval);
 timer=60;
 document.getElementById("otp").disabled=false;
 document.getElementById("timerValue").classList.remove("expired");
+document.getElementById("resendOtpBtn").disabled = true;
 startTimer();
 $.ajax({
     type:"POST",
