--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -342,6 +342,13 @@
                                     <img alt="Gymbuddy" src="assets/imgs/theme/icons/icon-cart.svg">
                                     <!-- <span class="pro-count white"></span> -->
                                 </a>
+
+                                <div class="header-action-icon-2">
+                                    <a href="/wallet">
+                                        <img class="svgInject" alt="wallet" src="assets/imgs/theme/icons/wallet.png">
+                                        <!-- <span class="pro-count blue">4</span> -->
+                                    </a>
+                                </div>
                                 
                             </div>
                             <div class="header-action-icon-2 d-block d-lg-none">
@@ -357,3 +364,86 @@
             </div>
         </div>
     </header>
+
+    <div class="mobile-header-active mobile-header-wrapper-style">
+        <div class="mobile-header-wrapper-inner">
+            <div class="mobile-header-top">
+                <div class="mobile-header-logo">
+                    <a href="index.html"><img src="assets/imgs/theme/icons/buddylogo1.png" alt="logo"></a>
+                </div>
+                <div class="mobile-menu-close close-style-wrap close-style-position-inherit">
+                    <button class="close-style search-close">
+                        <i class="icon-top"></i>
+                        <i class="icon-bottom"></i>
+                    </button>
+                </div>
+            </div>
+            <div class="mobile-header-content-area">
+                <div class="mobile-search search-style-3 mobile-header-border">
+
+                </div>
+                <div class="mobile-menu-wrap mobile-header-border">
+                    <div class="main-categori-wrap mobile-header-border">
+                        <!-- <a class="categori-button-active-2" href="#">
+                            <span class="fi-rs-apps"></span> Browse Categories 
+                        </a> -->
+                        <div class="categori-dropdown-wrap categori-dropdown-active-small">
+
+                        </div>
+                    </div>
+                    <!-- mobile menu start -->
+                    <nav>
+                        <ul class="mobile-menu">
+                            <li class="menu-item-has-children"><span class="menu-expand"></span><a href="/">Home</a>
+
+                            </li>
+                            <li class="menu-item-has-children"><span class="menu-expand"></span><a
+                                    href="/shop">shop</a>
+
+                            </li>
+                            <li class="menu-item-has-children"><span class="menu-expand"></span><a
+                                    href="/about">About</a>
+
+                            </li>
+                            <li class="menu-item-has-children"><span class="menu-expand"></span><a
+                                    href="/contactPage">Contact</a>
+
+                            </li>
+
+                        </ul>
+                    </nav>
+                    <!-- mobile menu end -->
+                </div>
+                <div class="mobile-header-info-wrap mobile-header-border">
+                    <div class="single-mobile-header-info mt-30">
+                        <a href="/contactPage"> Our location </a>
+                    </div>
+                    <div class="single-mobile-header-info">
+                        <ul>
+                            <% if (user) { %>
+                                <li><a href="#" class="flex-c-m trans-04 p-lr-25">
+                                        <%= user.name %>
+                                    </a></li>
+                                <li><a href="/userProfile">Profile</a></li>
+                                <li><a href="/logout">Logout</a></li>
+                                <% } else { %>
+                                    <li><i class="fi-rs-user"></i><a href="/signup">Sign Up</a></li>
+                                    <li><a href="/login">Log In</a></li>
+                                    <% } %>
+                        </ul>
+                    </div>
+                    <div class="single-mobile-header-info">
+                        <a href="#">(+01) - 2345 - 6789 </a>
+                    </div>
+                </div>
+                <div class="mobile-social-icon">
+                    <h5 class="mb-15 text-grey-4">Follow Us</h5>
+                    <a href="#"><img src="assets/imgs/theme/icons/icon-facebook.svg" alt=""></a>
+                    <a href="#"><img src="assets/imgs/theme/icons/icon-twitter.svg" alt=""></a>
+                    <a href="#"><img src="assets/imgs/theme/icons/icon-instagram.svg" alt=""></a>
+                    <a href="#"><img src="assets/imgs/theme/icons/icon-pinterest.svg" alt=""></a>
+                    <a href="#"><img src="assets/imgs/theme/icons/icon-youtube.svg" alt=""></a>
+                </div>
+            </div>
+        </div>
+    </div>
